--- a/src/app/modules/inicio/component/card/card.component.html
+++ b/src/app/modules/inicio/component/card/card.component.html
@@ -1,1 +1,29 @@
-<p>card works!</p>
+<div class="container">
+    <div class="row">
+      <h1>inicio</h1>
+      <div class="col">
+        <div *ngFor="let i of info" class=" contenido">
+          <mat-card class="example-card">
+            <mat-card-header>
+              <div mat-card-avatar class="example-header-image"></div>
+              <mat-card-title>{{i.nombre}}</mat-card-title>
+              <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+            </mat-card-header>
+            <img mat-card-image src="{{i.imagen}}" alt="">
+            <mat-card-content>
+              <p>
+               ${{i.precio}}
+              </p>
+            </mat-card-content>
+            <mat-card-actions>
+              <button mat-button>LIKE</button>
+              <button mat-button>SHARE</button>
+            </mat-card-actions>
+          </mat-card>
+        </div>
+
+      </div>
+
+    </div>
+
+   </div>
