creamos el inicio y trabajamos con los media query

--- a/src/app/modules/autentificacion/inicio-sesion/inicio-sesion.component.html
+++ b/src/app/modules/autentificacion/inicio-sesion/inicio-sesion.component.html
@@ -3,7 +3,8 @@
     <div class="row" >
     <h1>Inicio de Sesión</h1>
     
-    
+ 
+    <i id="registroIcon" class="material-icons">person</i>
     
       <mat-form-field appearance="fill">
         <mat-label>Direccion de correo electronico</mat-label>
