--- a/src/app/modules/autentificacion/registro/registro.component.html
+++ b/src/app/modules/autentificacion/registro/registro.component.html
@@ -2,7 +2,7 @@
     <div class="row">
    
       <h1>registrarse</h1>
-      <i class="material-icons" style="font-size: 200px;">person</i>
+      <i class="material-icons">person</i>
   
       <!-- nombre de usuario -->
       <mat-form-field appearance="fill">
