añadimos imagenes y cards al inicio

--- a/src/app/modules/inicio/pages/inicio/inicio.component.html
+++ b/src/app/modules/inicio/pages/inicio/inicio.component.html
@@ -1,3 +1,7 @@
 
-<!-- <app-card></app-card> -->
+<div class="contenedorPrincipal">
  <app-carrusel></app-carrusel>
+</div>
+<div class="contenedorSecundario" >
+ <app-card></app-card>
+</div>
