--- a/src/app/modules/inicio/component/card/card.component.html
+++ b/src/app/modules/inicio/component/card/card.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
-      <h1>inicio</h1>
-      <div class="col">
+   
+      <div class="col-6">
         <div *ngFor="let i of info" class=" contenido">
           <mat-card class="example-card">
             <mat-card-header>
