--- a/src/app/modules/inicio/pages/inicio/inicio.component.html
+++ b/src/app/modules/inicio/pages/inicio/inicio.component.html
@@ -2,6 +2,14 @@
 <div class="contenedorPrincipal">
  <app-carrusel></app-carrusel>
 </div>
-<div class="contenedorSecundario" >
+<section>
+   
+    <div id="buttonInicio" class="example-button-row">
+      
+      <button mat-flat-button>CATEGORIAS</button>
+   
+    
+    </div>
+<div class="contenedorSecundario " >
  <app-card></app-card>
 </div>
