--- a/src/app/modules/shared/components/navbar/navbar.component.html
+++ b/src/app/modules/shared/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar id="navMenu">
+<mat-toolbar id="navMenu" >
   <button id="menuSecciones" mat-icon-button class="example-icon"[matMenuTriggerFor]="secciones" >
     <mat-icon>menu</mat-icon>
   </button>
@@ -8,7 +8,8 @@
 </mat-menu>
 
 
-  <span>My App</span>
+  <span id="spanlogo1"><img id="imagenesNav" src="../assets/logoBoquita.png" alt=""></span>
+  <span id="spanlogo2"><img id="imagenesNav" src="../assets/logoBoquitaMovil.png" alt=""></span>
 
   <button id="menuInicio" mat-button routerLink="/inicio">inicio</button>
 
