solucionando errores del los card y sus media Querys y color al footer

--- a/src/app/modules/inicio/component/card/card.component.html
+++ b/src/app/modules/inicio/component/card/card.component.html
@@ -1,56 +1,22 @@
-<!-- <div class="container-fluid">
-    <div class="row">
-   
-      <div class="col-12 " >
-        <div *ngFor="let i of info" class=" contenido">
-          <mat-card class="example-card">
-            <mat-card-header>
-              <div mat-card-avatar class="example-header-image"></div>
-              <mat-card-title>{{i.nombre}}</mat-card-title>
-              <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-            </mat-card-header>
-            <img mat-card-image src="{{i.imagen}}" alt="">
-            
-            <mat-card-content>
-              <p>
-               ${{i.precio}}
-              </p>
-            </mat-card-content>
-            <mat-card-actions>
-              <button mat-button>LIKE</button>
-              <button mat-button>SHARE</button>
-            </mat-card-actions>
-          </mat-card>
-        </div>
+<div class="row" id="contenedorCards">
+  <div class="col-md-4 divCard">
+    <img class="imagenCard" src="../../../../../assets/Camiseta-Futbol-Alternativa-23_24.png" alt="">
+    <h2 class="fw-normal">Camisas</h2>
+    <p>Llega a la cancha con la camiseta del xeneize</p>
+    <p><a class="btn btn-primary" href="#">Ver más </a></p>
+  </div>
 
-      </div>
+  <div class="col-md-4 divCard">
+    <img class="imagenCard" src="../../../../../assets/Pantalon-Futbol-Alternativo-23_24.png" alt="">
+    <h2 class="fw-normal">Pantalones</h2>
+    <p>Juga tus partidos con los colores azul y oro</p>
+    <p><a class="btn btn-primary" href="#">Ver más </a></p>
+  </div>
 
-    </div>
-
-   </div> -->
-
-
-
-   <div class="container marketing">
-
-    <!-- Three columns of text below the carousel -->
-    <div class="row">
-      <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
-        <h2 class="fw-normal">Heading</h2>
-        <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
-        <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
-      </div><!-- /.col-lg-4 -->
-      <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
-        <h2 class="fw-normal">Heading</h2>
-        <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
-        <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
-      </div><!-- /.col-lg-4 -->
-      <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
-        <h2 class="fw-normal">Heading</h2>
-        <p>And lastly this, the third column of representative placeholder content.</p>
-        <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
-      </div><!-- /.col-lg-4 -->
-    </div><!-- /.row -->
+  <div class="col-md-4 divCard">
+    <img class="imagenCard" src="../../../../../assets/Abrigo-Buzo-3_Tiras_Azul-23_24.png" alt="">
+    <h2 class="fw-normal">Abrigos</h2>
+    <p>Cubrite del frio en todos lados </p>
+    <p><a class="btn btn-primary" href="#">Ver más </a></p>
+  </div>
+</div>
