--- a/src/app/modules/shared/components/footer/footer.component.css
+++ b/src/app/modules/shared/components/footer/footer.component.css
@@ -1,3 +1,8 @@
+#footerMain{
+    background-color: darkblue;
+    color:yellow;
+}
+
 @media(min-width:300px) and (max-width:700px){
     #footerMain{
         width: 100%;
