--- a/src/app/modules/shared/components/footer/footer.component.css
+++ b/src/app/modules/shared/components/footer/footer.component.css
@@ -1,39 +1,42 @@
-#footerMain{
-    background-color: darkblue;
-    color:rgb(255, 198, 0);
-}
+#footerMain {
+    background-color: rgb(4, 4, 136);
+    color: rgb(255, 198, 0);
 
-@media(min-width:300px) and (max-width:700px){
-    #footerMain{
+}
+@media(min-width:300px) and (max-width:700px) {
+    #footerMain {
         width: 100%;
+        height: 100%;
     }
-    #footerLetra{
+
+    #footerLetra {
         font-size: medium;
-    }  
-    #logoStyle{
-        width: 2rem;
-       } 
-
-  }
-  /* dispositivos mas grande */
-  @media (min-width:700px){
-    #footerMain{
-        width: 100%;
-        
-        
     }
-    #footerLetra{
-        font-size: large;
-       
-        
-    }   
-       #logoStyle{
+
+    #logoStyle {
         width: 2rem;
-       }
-    
-.redesSociales{
-    flex: 1 1 auto;
-    
+    }
+
 }
-    
-  }
+
+/* dispositivos mas grande */
+@media (min-width:700px) {
+    #footerMain {
+        width: 100%;
+        height: 50px;
+    }
+
+    #footerLetra {
+        font-size: large;
+    }
+
+    #logoStyle {
+        width: 2rem;
+    }
+
+    .redesSociales {
+        flex: 1 1 auto;
+
+    }
+
+}
