--- a/src/app/modules/shared/components/footer/footer.component.css
+++ b/src/app/modules/shared/components/footer/footer.component.css
@@ -1,8 +1,22 @@
 #footerMain {
     background-color: rgb(4, 4, 136);
     color: rgb(255, 198, 0);
+   
+    bottom: 20;
+    position: relative;
+   
+    width: 100%;
+    z-index: 1000px;
 
 }
+/#dividerFooter{
+    bottom: 0;
+    position: relative;
+    bottom: 0;
+    position: fixed;
+    width: 100%;
+    z-index: 1000;
+} 
 @media(min-width:300px) and (max-width:700px) {
     #footerMain {
         width: 100%;
@@ -22,7 +36,7 @@
 /* dispositivos mas grande */
 @media (min-width:700px) {
     #footerMain {
-        width: 100%;
+   
         height: 50px;
     }
 
