utilizacion de crypto

--- a/src/app/modules/autentificacion/inicio-sesion/inicio-sesion.component.css
+++ b/src/app/modules/autentificacion/inicio-sesion/inicio-sesion.component.css
@@ -1,6 +1,6 @@
 .container {
     display: flex;
-    
+ margin-bottom: 300px;
     align-items: center;
     padding: 50px;
     text-align: center;
