--- a/src/app/modules/inicio/component/carrusel/carrusel.component.css
+++ b/src/app/modules/inicio/component/carrusel/carrusel.component.css
@@ -97,6 +97,7 @@
     #carruselImg{
         height: 100%;
         width: 100%;
+        object-fit: fill;
     }
     .carousel-item{
         height: 35rem;
