--- a/src/app/modules/shared/components/footer/footer.component.html
+++ b/src/app/modules/shared/components/footer/footer.component.html
@@ -6,9 +6,9 @@
       <div class="col-6">
         <p id="footerLetra">&copy; 2023 Peña Corazon Oro Y Azul. Derechos Reservados.</p>
       </div>
-       <div class="col-6">
+       <div id="redesSociales" class="col-6">
         <ul class="list-unstyled d-flex">
-          <span class="redesSociales"></span>
+          <span></span>
           <svg id="logoStyle" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-facebook"
             viewBox="0 0 16 16">
             <path
