--- a/src/app/modules/autentificacion/inicio-sesion/inicio-sesion.component.html
+++ b/src/app/modules/autentificacion/inicio-sesion/inicio-sesion.component.html
@@ -1,36 +1,36 @@
-<p>inicio-sesion works!</p>
+
 <div class="container">
-    <div class="row" >
+  <div class="row">
     <h1>Inicio de Sesión</h1>
-    
- 
+
+
     <i id="registroIcon" class="material-icons">person</i>
-    
-      <mat-form-field appearance="fill">
-        <mat-label>Direccion de correo electronico</mat-label>
-        
-        <input  [(ngModel)]="this.coleccionUsers.email" matInput placeholder="gonzacofrescc@gmail.com" required>
-    
-      </mat-form-field>
-    
-    
-    
-      <mat-form-field>
-        <mat-label>Enter your password</mat-label>
-        <input matInput [type]="hide ? 'password' : 'text'" #input minlength="6" required [(ngModel)]="this.coleccionUsers.password">
-        <button class="boton" mat-icon-button matSuffix (click)="hide=!hide" [attr.aria-label]="'Hide password'"
-          [attr.aria-pressed]="hide">
-          <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-        </button>
-        <mat-hint align="start">Minimo 6/{{input.value.length}}</mat-hint>
-      </mat-form-field>
-    
-    
-    
-    
-       <button mat-raised-button color="primary" class="boton" (click)="iniciarSesion()"> 
-        Iniciar
-      </button> 
-    
-    
-    
+
+    <mat-form-field appearance="fill">
+      <mat-label>Direccion de correo electronico</mat-label>
+
+      <input [(ngModel)]="this.coleccionUsers.email" matInput placeholder="gonzacofrescc@gmail.com" required>
+
+    </mat-form-field>
+
+
+
+    <mat-form-field>
+      <mat-label>Enter your password</mat-label>
+      <input matInput [type]="hide ? 'password' : 'text'" #input minlength="6" required
+        [(ngModel)]="this.coleccionUsers.password">
+      <button class="boton" mat-icon-button matSuffix (click)="hide=!hide" [attr.aria-label]="'Hide password'"
+        [attr.aria-pressed]="hide">
+        <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+      </button>
+      <mat-hint align="start">Minimo 6/{{input.value.length}}</mat-hint>
+    </mat-form-field>
+
+
+
+
+    <button mat-raised-button color="primary" class="boton" (click)="iniciarSesion()">
+      Iniciar
+    </button>
+  </div>
+</div>
