--- a/src/app/modules/shared/components/footer/footer.component.css
+++ b/src/app/modules/shared/components/footer/footer.component.css
@@ -9,7 +9,7 @@
     z-index: 1000px;
 
 }
-/#dividerFooter{
+#dividerFooter{
     bottom: 0;
     position: relative;
     bottom: 0;
@@ -20,7 +20,7 @@
 @media(min-width:300px) and (max-width:700px) {
     #footerMain {
         width: 100%;
-        height: 100%;
+        height: 20%;
     }
 
     #footerLetra {
@@ -28,7 +28,7 @@
     }
 
     #logoStyle {
-        width: 2rem;
+        width: 4rem;
     }
 
 }
@@ -48,8 +48,8 @@
         width: 2rem;
     }
 
-    .redesSociales {
-        flex: 1 1 auto;
+    #redesSociales {
+    display: block;
 
     }
 
